--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
 
     <ImageView
         android:id="@+id/rain1"
+        android:scaleType="fitXY"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:contentDescription="@string/gif_desc"
@@ -23,8 +24,9 @@
 
     <ImageView
         android:id="@+id/windowSheet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:src="@drawable/empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,8 +159,8 @@
 
     <ImageView
         android:id="@+id/settings"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="@drawable/settings"
